--- a/Dockerfiles/Dockerfile_slim
+++ b/Dockerfiles/Dockerfile_slim
@@ -1,9 +1,9 @@
 FROM python:3.12-slim-bullseye
 
-RUN apt-get update && apt-get install -y git
+RUN apt-get update && apt-get install -y git  && rm -rf /var/lib/apt/lists/*
 ARG SJP_COMMIT=main
-RUN [ ! -d "/StaticJinjaPlus" ] && git clone https://github.com/MrDave/StaticJinjaPlus.git /StaticJinjaPlus \
-&& cd /StaticJinjaPlus && git checkout $SJP_COMMIT || echo "Directory already exists" 
+RUN git clone https://github.com/MrDave/StaticJinjaPlus.git /StaticJinjaPlus \
+&& cd /StaticJinjaPlus && git checkout $SJP_COMMIT
 WORKDIR /StaticJinjaPlus/
 RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 ARG TEMPLATE_FOLDER=templates
