--- a/Dockerfiles/Dockerfile_ubuntu
+++ b/Dockerfiles/Dockerfile_ubuntu
@@ -1,8 +1,8 @@
 FROM ubuntu
-RUN apt-get update && apt-get install -y python3 python3-pip git
+RUN apt-get update && apt-get install -y python3 python3-pip git  && rm -rf /var/lib/apt/lists/*
 ARG SJP_COMMIT=main
-RUN [ ! -d "/opt/StaticJinjaPlus" ] && git clone https://github.com/MrDave/StaticJinjaPlus.git /opt/StaticJinjaPlus \
-&& cd /opt/StaticJinjaPlus && git checkout $SJP_COMMIT || echo "Directory already exists" 
+RUN git clone https://github.com/MrDave/StaticJinjaPlus.git /opt/StaticJinjaPlus \
+&& cd /opt/StaticJinjaPlus && git checkout $SJP_COMMIT
 
 WORKDIR /opt/StaticJinjaPlus/
 RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
